--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -1,26 +1,11 @@
-<ul class="right hide-on-med-and-down">
-    <li><a routerLink="/usuarios-list">Users</a></li>
-    <li><a routerLink="/admins-list">Administradores</a></li>
-    <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-      <ul class="dropdown">
-        <li><a routerLink="/usuarios-list">Users</a></li>
-        <li><a routerLink="/admins-list">Administradores</a></li>
-        <li><a routerLink="/usuarios-list">Users</a></li>
-        <li><a routerLink="/admins-list">Administradores</a></li>
-      </ul>
-    </li>
-    
-    <li><a routerLink="/maestros-list">Maestros</a></li>
-    <li><a routerLink="/grupos">Grupos</a></li>
-    <li><a routerLink="/clases">Clases</a></li>
-    <li class="has-dropdown"><a>Horarios</a>
-      <ul class="dropdown">
-        <li><a routerLink="/horario-form">Agregar Horario</a></li>
-        <li><a routerLink="/horario">Ver Horarios</a></li>
-      </ul>
-    </li>
-    <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
-    <li><a routerLink="">Grabaciones</a></li>
-    <li><a routerLink="">Materiales</a></li>
-  </ul>
-<p>materiales works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  
+</body>
+</html>
