--- a/client/src/app/components/alumnos/alumnos.component.html
+++ b/client/src/app/components/alumnos/alumnos.component.html
@@ -13,8 +13,11 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       
       <ul class="right hide-on-med-and-down">
+        <li>{{nombreUsuario}}</li>
         <li><a routerLink="/clases">Clases</a></li>
+        
         <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
+        <li><a routerLink="/grabaciones">Grabaciones</a></li>
       </ul>
       <p style="text-align:center; margin-left:150px">Alumno</p>
     </div>
