--- a/client/src/app/components/calificaciones-form/calificaciones-form.component.html
+++ b/client/src/app/components/calificaciones-form/calificaciones-form.component.html
@@ -16,9 +16,13 @@
             ><i class="material-icons">menu</i></a
           >
           <ul class="right hide-on-med-and-down">
-            <li><a routerLink="/usuarios-list">Users</a></li>
-            <li><a routerLink="/admins-list">Administradores</a></li>
-            <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+              <li><a (click)="logout()">Cerrar Sesion</a></li>
+            </ul>
+          </li>
+            <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
+            <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
               <ul class="dropdown">
                 <li><a routerLink="/usuarios-list">Users</a></li>
                 <li><a routerLink="/admins-list">Administradores</a></li>
@@ -27,17 +31,17 @@
               </ul>
             </li>
             
-            <li><a routerLink="/maestros-list">Maestros</a></li>
-            <li><a routerLink="/grupos">Grupos</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
             <li><a routerLink="/clases">Clases</a></li>
             <li class="has-dropdown"><a>Horarios</a>
               <ul class="dropdown">
-                <li><a routerLink="/horarios-form">Agregar Horario</a></li>
+                <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
                 <li><a routerLink="/horarios">Ver Horarios</a></li>
               </ul>
             </li>
             <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
-            <li><a routerLink="">Grabaciones</a></li>
+            <li><a routerLink="/grabaciones">Grabaciones</a></li>
             <li><a routerLink="">Materiales</a></li>
           </ul>
         </div>
@@ -112,14 +116,7 @@
 
                 <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                   <!-- component -->
-                  <button 
-                  data-ripple-light="true"
-                  data-popover-target="popover"
-                  (click)="saveCalificacion(alumno.id_user,i)"
-                  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
-                  >
-                  AGREGAR
-                  </button>
+                
                 </td>
 
                 <td class="text-sm text-gray-900 font-light px-4 py-4 whitespace-nowrap">
@@ -127,7 +124,15 @@
                 </td>
               </tr>
             </table>
-  
+            
+              <button 
+                  data-ripple-light="true"
+                  data-popover-target="popover"
+                  (click)="saveCalificacion()"
+                  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                  >
+                  AGREGAR
+                  </button>
             
           </div>
         </div>
