--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -15,29 +15,33 @@
           ><i class="material-icons">menu</i></a
         >
         <ul class="right hide-on-med-and-down">
-          <li><a routerLink="/usuarios-list">Users</a></li>
-          <li><a routerLink="/admins-list">Administradores</a></li>
-          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+            <li><a (click)="logout()">Cerrar Sesion</a></li>
+          </ul>
+        </li>
+          <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
+          <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
             <ul class="dropdown">
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
+              <li ><a routerLink="/usuarios-list">Users</a></li>
+              <li ><a routerLink="/admins-list">Administradores</a></li>
+              <li ><a routerLink="/usuarios-list">Users</a></li>
+              <li ><a routerLink="/admins-list">Administradores</a></li>
             </ul>
           </li>
           
-          <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/grupos">Grupos</a></li>
-          <li><a routerLink="/clases">Clases</a></li>
-          <li class="has-dropdown"><a>Horarios</a>
+          <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
+          <li *ngIf="isAdmin||isMaestro"><a routerLink="/clases">Clases</a></li>
+          <li *ngIf="isAdmin||isMaestro" class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
-              <li><a routerLink="/horarios-form">Agregar Horario</a></li>
+              <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
               <li><a routerLink="/horarios">Ver Horarios</a></li>
             </ul>
           </li>
           <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
-          <li><a routerLink="">Grabaciones</a></li>
-          <li><a routerLink="">Materiales</a></li>
+          <li><a routerLink="/grabaciones">Grabaciones</a></li>
+          <li><a routerLink="/materiales">Materiales</a></li>
         </ul>
       </div>
     </nav>
@@ -59,14 +63,11 @@
       <dl class="mt-1 flex-grow flex flex-col justify-between">
         <dt class="sr-only">Title</dt>
         <dd class="text-gray-500 text-sm">{{clase.categoria}} <br></dd>
-        <dt class="sr-only">Role</dt>
-        <dd class="mt-3">
-          <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
-        </dd>
+       
       </dl>
     </div>
     <div>
-      <div class="-mt-px flex divide-x divide-gray-200">
+      <div *ngIf="!isAlumno" class="-mt-px flex divide-x divide-gray-200">
         <div class="w-0 flex-1 flex">
           <a [routerLink]="['/calificaciones-form',clase.id_grupo]" class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
             <!-- Heroicon name: solid/mail -->
@@ -76,6 +77,16 @@
         </div>
         <div class="-ml-px w-0 flex-1 flex">
           <a (click)="getAlumnos(clase.id_grupo)" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
+            <!-- Heroicon name: solid/phone -->
+           
+            <span class="ml-3">View Grades</span>
+          </a>
+        </div>
+      </div>
+      <div *ngIf="isAlumno" class="-mt-px flex divide-x divide-gray-200">
+       
+        <div class="-ml-px w-0 flex-1 flex">
+          <a [routerLink]="['/calificaciones',clase.id_grupo,id]" class="relative w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-br-lg hover:text-gray-500">
             <!-- Heroicon name: solid/phone -->
            
             <span class="ml-3">View Grades</span>
