--- a/client/src/app/components/calificaciones/calificaciones.component.html
+++ b/client/src/app/components/calificaciones/calificaciones.component.html
@@ -15,10 +15,14 @@
           ><i class="material-icons">menu</i></a
         >
         <ul class="right hide-on-med-and-down">
-          <li><a routerLink="/usuarios-list">Users</a></li>
-          <li><a routerLink="/admins-list">Administradores</a></li>
-          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-            <ul class="dropdown">
+          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+            <li><a (click)="logout()">Cerrar Sesion</a></li>
+          </ul>
+        </li>
+          <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
+          <li  *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+            <ul *ngIf="isAdmin" class="dropdown">
               <li><a routerLink="/usuarios-list">Users</a></li>
               <li><a routerLink="/admins-list">Administradores</a></li>
               <li><a routerLink="/usuarios-list">Users</a></li>
@@ -26,17 +30,17 @@
             </ul>
           </li>
           
-          <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/grupos">Grupos</a></li>
-          <li><a routerLink="/clases">Clases</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
+          <li ><a routerLink="/clases">Clases</a></li>
           <li class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
-              <li><a routerLink="/horarios-form">Agregar Horario</a></li>
+              <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
               <li><a routerLink="/horarios">Ver Horarios</a></li>
             </ul>
           </li>
           <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
-          <li><a routerLink="">Grabaciones</a></li>
+          <li><a routerLink="/grabaciones">Grabaciones</a></li>
           <li><a routerLink="">Materiales</a></li>
         </ul>
       </div>
@@ -44,7 +48,90 @@
   </header>
   <div class="chart-container" style="width:1000px;height: 1100px;">
     <canvas id="myChart"></canvas>
+
+    <div class="flex flex-col">
+      <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+        <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+          <div class="overflow-hidden">
+            <h5>Calificaciones   {{nombreAlumno}}</h5>
+    
+            <input  type="text" style="height: 35px; width: 800px; margin-left: 20%" name="search"
+              placeholder="Search"
+              class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+            <table class="min-w-full">
+              <thead class="bg-white border-b">
+                <tr>
+                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                    Fecha (YYYY/MM/DD)
+                  </th>
+                  <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                    Calificacion
+                  </th>
+                  
+                
+                 
+                </tr>
+              </thead>
+              <tr  class="bg-gray-100 border-b" *ngFor="let calif of calificaciones[0] let i = index">
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                  {{ calif.fecha_calif.substring(0,10) }}
+                  
+                </td>
+                <td  class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                  
+                  
+                  {{ calif.calificacion }}
+                 
+                  <button 
+                  style="margin-left:100px"
+                  *ngIf= "calif.calificacion==0" (click)="getGrabacion(calif.id_grupo,calif.fecha_calif.substring(0,10))"
+                  data-ripple-light="true"
+                  data-popover-target="popover"
+                  
+                  class="middle none center rounded-lg bg-gradient-to-tr from-green-600 to-green-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                  >
+                  VIEW RECORDING 
+                  </button>
+                </td>
+                
+                
+              
+               
+    
+                <td *ngIf="!isAlumno" class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                  <!-- component -->
+                  <button 
+                  data-ripple-light="true"
+                  data-popover-target="popover"
+                  
+                  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                  >
+                  UPDATE
+                  </button>
+                 
+                </td>
+                <td *ngIf="!isAlumno" class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                  <!-- component -->
+                  <button 
+                  data-ripple-light="true"
+                  data-popover-target="popover"
+                  (click)="deleteCalificacion(calif.id_calificacion)"
+                  class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
+                  >
+                  DELETE
+                  </button>
+                 
+                </td>
+                
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
+
 </body>
 </html>
 
