--- a/client/src/app/components/clases-list/clases-list.component.html
+++ b/client/src/app/components/clases-list/clases-list.component.html
@@ -11,11 +11,16 @@
   <header>
     <nav>
       <div class="nav-wrapper" style="background-color: #0066ff">
-        <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo"
-            style="width: px; height:62px; margin-left: 5px;" /></a>
+        <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
 
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
         <ul class="right hide-on-med-and-down">
+          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+            <li><a (click)="logout()">Cerrar Sesion</a></li>
+          </ul>
+        </li>
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
           <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
@@ -26,7 +31,7 @@
               <li><a routerLink="/admins-list">Administradores</a></li>
             </ul>
           </li>
-
+          
           <li><a routerLink="/maestros-list">Maestros</a></li>
           <li><a routerLink="/grupos">Grupos</a></li>
           <li><a routerLink="/clases">Clases</a></li>
@@ -37,7 +42,7 @@
             </ul>
           </li>
           <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
-          <li><a routerLink="">Grabaciones</a></li>
+          <li><a routerLink="/grabaciones">Grabaciones</a></li>
           <li><a routerLink="">Materiales</a></li>
         </ul>
       </div>
@@ -71,7 +76,7 @@
       </div>
       <div>
         <div class="-mt-px flex divide-x divide-gray-200">
-          <div class="w-0 flex-1 flex">
+          <div *ngIf="isAdmin||isMaestro" class="w-0 flex-1 flex">
             <a (click)="getAlumnos(clase.id_grupo)"
               class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
               <!-- Heroicon name: solid/mail -->
@@ -81,6 +86,20 @@
           </div>
    
         </div>
+
+        <div *ngIf="isAdmin" class="-mt-px flex divide-x divide-gray-200">
+          <div class="w-0 flex-1 flex">
+            <a (click)="copiarGrupo(clase.id_grupo)"
+              class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+              <!-- Heroicon name: solid/mail -->
+
+              <span class="ml-3">Copiar Grupo</span>
+            </a>
+          </div>
+   
+        </div>
+
+
       </div>
     </li>
 
@@ -89,7 +108,24 @@
     <!-- More people... -->
 
   </ul>
+  <h6 *ngIf="agregarGrupo">Ingresar Nombre Nuevo del Grupo</h6>
+  <input *ngIf="agregarGrupo" type="text" name="last_name" [(ngModel)]="grupo.nombre_grupo"
+    style="height: 35px; width: 150px" id="password" placeholder="New Group Name"
+    class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
   <br>
+  <button *ngIf="agregarGrupo" (click)="agregarGrupoNuevo()" data-ripple-light="true" data-popover-target="popover"
+  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+  AGREGAR NUEVO GRUPO
+</button>
+<br><br>
+<br><br>
+
+  <button routerLink="/clases-list" data-ripple-light="true" data-popover-target="popover"
+                  class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+                  AGREGAR NUEVAS CLASES / ASIGNAR ALUMNOS
+                </button>
+  <br>
+
   <h6 *ngIf="click">Lista de Alumnos </h6>
   <div *ngIf="click" class="flex flex-col">
     <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
@@ -120,6 +156,13 @@
               </td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 {{alumno.last_nameU2}}
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <!-- component -->
+                <button (click)="borrarAlumno(alumno.id_user,alumno.id_grupo)" data-ripple-light="true" data-popover-target="popover"
+                  class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+                  DELETE
+                </button>
               </td>
 
 
