--- a/client/src/app/components/inicio/inicio.component.html
+++ b/client/src/app/components/inicio/inicio.component.html
@@ -9,15 +9,18 @@
 </head>
 
 <body class="bg-white">
-  <header>
+  <header >
     <nav>
       <div class="nav-wrapper" style="background-color: #0066ff">
         <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-         
-          <li><a routerLink="/login"><i class="fa-solid fa-user" style="margin-right: 10px;"></i>Log In</a></li>
+          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+            <li style="z-index: 1;"><a (click)="logout()">Cerrar Sesion</a></li>
+          </ul>
+        </li>
+          <li *ngIf="!isLogin"><a routerLink="/login"><i class="fa-solid fa-user" style="margin-right: 10px;"></i>Log In</a></li>
           <li *ngIf="isAdmin"><a routerLink="/registro"><i class="fa-solid fa-user-plus" style="margin-right: 10px;"></i>Sign Up</a></li>
 
         </ul>
