--- a/client/src/app/components/inicio/inicio.component.html
+++ b/client/src/app/components/inicio/inicio.component.html
@@ -16,7 +16,7 @@
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"
           ><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+          <li class="has-dropdown"><a routerLink="/clases" style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
             <li style="z-index: 1;"><a (click)="logout()">Cerrar Sesion</a></li>
           </ul>
         </li>
