--- a/client/src/app/components/calificaciones-list/calificaciones-list.component.html
+++ b/client/src/app/components/calificaciones-list/calificaciones-list.component.html
@@ -22,17 +22,12 @@
           <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
           <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
           <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-            <ul class="dropdown">
-              <li ><a routerLink="/usuarios-list">Users</a></li>
-              <li ><a routerLink="/admins-list">Administradores</a></li>
-              <li ><a routerLink="/usuarios-list">Users</a></li>
-              <li ><a routerLink="/admins-list">Administradores</a></li>
-            </ul>
+
           </li>
           
           <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
           <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
-          <li *ngIf="isAdmin||isMaestro"><a routerLink="/clases">Clases</a></li>
+          <li ><a routerLink="/clases">Clases</a></li>
           <li *ngIf="isAdmin||isMaestro" class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
               <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
@@ -46,6 +41,7 @@
       </div>
     </nav>
   </header>
+  <h4 style="text-align: center">CALIFICACIONES</h4>
   <input
   type="text" style="height: 35px; width: 800px; margin-left: 20%;" name="search" placeholder="Search" [(ngModel)]="filterPost"
   class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
@@ -144,6 +140,7 @@
             <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"*ngFor="let fecha of arrayFechas">
               
               <p >{{obtenerCalificacion(alumno.id_user,fecha)}}</p>
+             
             </td>
             <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
               
@@ -164,6 +161,70 @@
   </div>
 </div>
 </div>
+
+<button *ngIf="isAdmin"  data-ripple-light="true" data-popover-target="popover"
+            class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+            Calificaciones Globales
+          </button>
+
+
+          <h6 *ngIf="isAdmin">Lista de Calificaciones </h6>
+          <button *ngIf="isAdmin" (click)="exportarAExcel()">Exportar a Excel</button>
+          <div *ngIf="isAdmin"  class="flex flex-col">
+            <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+              <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+                <div class="overflow-hidden">
+                  <table class="min-w-full" #tabla>
+                    <thead class="bg-white border-b">
+                      <tr>
+                        <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                          Name
+                        </th>
+                        <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                         Grade
+                        </th>
+                        <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                          Grupo
+                        </th>
+                        <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                          Fecha
+                        </th>
+                        
+          
+          
+                      </tr>
+                    </thead>
+                    <tr class="bg-gray-100 border-b" *ngFor="let calif of arrayAllCalificaciones[0]">
+                      <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                        {{obtenerAlumno(calif.id_alumno.toString())}}
+                      </td>
+                      <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                        {{calif.calificacion}}
+                      </td>
+                      <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                       {{obtenerGrupo(calif.id_grupo.toString())}}
+                      </td>
+                      <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                        
+                        {{calif.fecha_calif.substring(0,10)}}
+                      </td>
+  
+          
+          
+          
+          
+                    </tr>
+                  </table>
+                  <h6 >PROMEDIO GLOBAL: </h6>{{promedio}}
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <canvas class="chart chart-pie" chart-data="datos" chart-labels="etiquetas" chart-type="pie"></canvas>
+
+
+
 
 <!-- 
   <div class="flex flex-col">
