--- a/client/src/app/components/calificaciones/calificaciones.component.html
+++ b/client/src/app/components/calificaciones/calificaciones.component.html
@@ -22,12 +22,7 @@
           <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
           <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
           <li  *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-            <ul *ngIf="isAdmin" class="dropdown">
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-            </ul>
+
           </li>
           
           <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
@@ -46,6 +41,7 @@
       </div>
     </nav>
   </header>
+
   <div class="chart-container" style="width:1000px;height: 1100px;">
     <canvas id="myChart"></canvas>
 
@@ -53,11 +49,8 @@
       <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
         <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
           <div class="overflow-hidden">
-            <h5>Calificaciones   {{nombreAlumno}}</h5>
+            <h5>Calificaciones   {{obtenerAlumno(nombreAlumno)}}</h5>
     
-            <input  type="text" style="height: 35px; width: 800px; margin-left: 20%" name="search"
-              placeholder="Search"
-              class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
             <table class="min-w-full">
               <thead class="bg-white border-b">
                 <tr>
@@ -103,7 +96,7 @@
                   <button 
                   data-ripple-light="true"
                   data-popover-target="popover"
-                  
+                  (click)="getCalificacion(calif.id_calificacion,calif.id_alumno,calif.fecha_calif.substring(0,10))"
                   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                   >
                   UPDATE
@@ -127,9 +120,38 @@
             </table>
           </div>
         </div>
+        <h6 *ngIf="isEdit" >Ingresar Nueva Calificacion</h6>
+        <div style="margin-left: 30px; margin-top: 20px;">
+          <label
+            for="email"
+            class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+            >Fecha</label
+          >
+          <input
+          *ngIf="isEdit"
+            type="date"
+            name="Hora_inicio"
+            id="email"
+            [(ngModel)]="calificacion.fecha_calif"
+            style="width: 150px"
+            placeholder="example@example.com"
+            value=""
+            class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+          />
+        </div>
+        <input *ngIf="isEdit"  type="text" name="last_name" [(ngModel)]="calificacion.calificacion"
+          style="height: 35px; width: 150px" id="password" placeholder="New Grade"
+          class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+        
+        <br>
+        <button *ngIf="isEdit" (click)="updateCalificacion()" data-ripple-light="true" data-popover-target="popover"
+        class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+        Guardar Calificacion
+      </button>
       </div>
     </div>
   </div>
+  <button (click)="exportarAPDF()">Exportar pdf</button>
 
 
 </body>
