--- a/client/src/app/components/clases-list/clases-list.component.html
+++ b/client/src/app/components/clases-list/clases-list.component.html
@@ -21,23 +21,18 @@
             <li><a (click)="logout()">Cerrar Sesion</a></li>
           </ul>
         </li>
-          <li><a routerLink="/usuarios-list">Users</a></li>
-          <li><a routerLink="/admins-list">Administradores</a></li>
-          <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-            <ul class="dropdown">
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-            </ul>
+          <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
+          <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+           
           </li>
           
-          <li><a routerLink="/maestros-list">Maestros</a></li>
-          <li><a routerLink="/grupos">Grupos</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
           <li><a routerLink="/clases">Clases</a></li>
-          <li class="has-dropdown"><a>Horarios</a>
+          <li *ngIf="!isAlumno" class="has-dropdown"><a>Horarios</a>
             <ul class="dropdown">
-              <li><a routerLink="/horarios-form">Agregar Horario</a></li>
+              <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
               <li><a routerLink="/horarios">Ver Horarios</a></li>
             </ul>
           </li>
@@ -48,9 +43,11 @@
       </div>
     </nav>
   </header>
+  <h4 style="text-align: center">CLASES</h4>
   <input type="text" style="height: 35px; width: 800px; margin-left: 20%;" name="search" placeholder="Search"
     class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
 
+    
   <!-- This example requires Tailwind CSS v2.0+ -->
   <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200"
@@ -62,6 +59,7 @@
         <h3 class="mt-6 text-gray-900 text-sm font-medium">{{clase.nombre_grupo}}</h3>
         <dl class="mt-1 flex-grow flex flex-col justify-between">
           <dt class="sr-only">Title</dt>
+          <dd class="text-gray-500 text-sm">{{clase.Idioma}} <br></dd>
           <h4 class="mt-6 text-gray-900 text-sm font-medium">Category</h4>
           <dd class="text-gray-500 text-sm">{{clase.categoria}} <br></dd>
           <h4 class="mt-6 text-gray-900 text-sm font-medium">Teachers</h4>
@@ -115,12 +113,12 @@
   <br>
   <button *ngIf="agregarGrupo" (click)="agregarGrupoNuevo()" data-ripple-light="true" data-popover-target="popover"
   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
-  AGREGAR NUEVO GRUPO
+  AGREGAR GRUPO
 </button>
-<br><br>
-<br><br>
+<br>
 
-  <button routerLink="/clases-list" data-ripple-light="true" data-popover-target="popover"
+
+  <button *ngIf="isAdmin" routerLink="/clases-list" data-ripple-light="true" data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
                   AGREGAR NUEVAS CLASES / ASIGNAR ALUMNOS
                 </button>
@@ -159,7 +157,7 @@
               </td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 <!-- component -->
-                <button (click)="borrarAlumno(alumno.id_user,alumno.id_grupo)" data-ripple-light="true" data-popover-target="popover"
+                <button *ngIf="isAdmin" (click)="borrarAlumno(alumno.id_user,alumno.id_grupo)" data-ripple-light="true" data-popover-target="popover"
                   class="middle none center rounded-lg bg-gradient-to-tr from-red-600 to-red-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
                   DELETE
                 </button>
