--- a/client/src/app/components/grupos/grupos.component.html
+++ b/client/src/app/components/grupos/grupos.component.html
@@ -22,12 +22,7 @@
           <li><a routerLink="/usuarios-list">Users</a></li>
           <li><a routerLink="/admins-list">Administradores</a></li>
           <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-            <ul class="dropdown">
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-              <li><a routerLink="/usuarios-list">Users</a></li>
-              <li><a routerLink="/admins-list">Administradores</a></li>
-            </ul>
+
           </li>
           
           <li><a routerLink="/maestros-list">Maestros</a></li>
@@ -46,6 +41,7 @@
         </ul>
       </div>
     </nav>
+    <h4 style="text-align: center">GRUPOS</h4>
   </header>
         <input
         type="text" style="height: 35px; width: 800px; margin-left: 20%;"placeholder="Search" 
@@ -61,8 +57,8 @@
               <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60" alt="">
               <h3 class="mt-6 text-gray-900 text-sm font-medium">{{grupos.nombre_grupo}}</h3>
               <dl class="mt-1 flex-grow flex flex-col justify-between">
-                <dt class="sr-only">Title</dt>
-                <dd class="text-gray-500 text-sm"></dd>
+                          
+                <h4 class="mt-6 text-gray-900 text-sm font-medium">Category</h4>
                 <dd class="text-gray-500 text-sm">{{grupos.categoria}}</dd>
                 <dt class="sr-only">Role</dt>
                 <h3 class="mt-6 text-gray-900 text-sm font-medium">Teachers</h3>
