--- a/client/src/app/components/horarios-form/horarios-form.component.html
+++ b/client/src/app/components/horarios-form/horarios-form.component.html
@@ -23,12 +23,7 @@
             <li><a routerLink="/usuarios-list">Users</a></li>
             <li><a routerLink="/admins-list">Administradores</a></li>
             <li class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
-              <ul class="dropdown">
-                <li><a routerLink="/usuarios-list">Users</a></li>
-                <li><a routerLink="/admins-list">Administradores</a></li>
-                <li><a routerLink="/usuarios-list">Users</a></li>
-                <li><a routerLink="/admins-list">Administradores</a></li>
-              </ul>
+
             </li>
             
             <li><a routerLink="/maestros-list">Maestros</a></li>
@@ -47,31 +42,13 @@
         </div>
       </nav>
     </header>
+    <h4 style="text-align: center">CREAR HORARIOS</h4>
     <form>
      
 
       
 
-  <div>
-    <div class="field">
-      <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Semana</label>
-      <div class="control">
-        <div class="select">
-          <select [(ngModel)]="horario.semana" name="grupo" required>
-            <option>Select Group</option>
-            <option value="1">Semana 1</option>
-            <option value="2">Semana 2</option>
-            <option value="3">Semana 3</option>
-            <option value="4">Semana 4</option>
 
-            
-
-          </select>
-        </div>
-
-      </div>
-    </div>
-</div>
 
 
 <div class="flex flex-col">
@@ -142,8 +119,8 @@
   <div class="field" style="margin-left:30px">
     <div class="control">
       <p>ID:</p>
-      <input type="text" [(ngModel)]="horario.id_grupo" style="width: 60px; " disabled />{{
-     horario.id_grupo}} {{grupo.categoria}}
+      <input type="text" [(ngModel)]="horario.id_grupo" style="width: 0px; " disabled />{{
+     horario.id_grupo}} 
     </div>
   </div>
 
@@ -162,7 +139,26 @@
 </div>
 -->
 
+<div>
+  <div class="field">
+    <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Semana</label>
+    <div class="control">
+      <div class="select">
+        <select [(ngModel)]="horario.semana" name="grupo" required>
+          <option>Select Group</option>
+          <option value="1">Semana 1</option>
+          <option value="2">Semana 2</option>
+          <option value="3">Semana 3</option>
+          <option value="4">Semana 4</option>
 
+          
+
+        </select>
+      </div>
+
+    </div>
+  </div>
+</div>
 <div>
   <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Start Time</label>
   <input type="time" name="Hora_inicio" id="email" [(ngModel)]="horario.Hora_inicio" style="width:150px" placeholder="example@example.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
