--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -18,9 +18,9 @@
       <div class="hidden bg-cover lg:block lg:w-2/3" style="background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)">
           <div class="flex items-center h-full px-20 bg-opacity-40">
               <div>
-                  <h2 class="text-4xl font-bold text-white">WELCOME</h2>
+                  <h2 class="text-4xl font-bold text-white">WELCOME TO INNOVA LENGUAGE SOLUTIONS</h2>
                   
-                  <p class="max-w-xl mt-3 text-gray-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In autem ipsa, nulla laboriosam dolores, repellendus perferendis libero suscipit nam temporibus molestiae</p>
+                  <p class="max-w-xl mt-3 text-gray-300"></p>
               </div>
           </div>
       </div>
@@ -59,7 +59,7 @@
 
                   </form>
 
-                  <p class="mt-6 text-sm text-center text-gray-400">Don&#x27;t have an account yet? <a routerLink="/registro" class="text-blue-500 focus:outline-none focus:underline hover:underline">Sign up</a>.</p>
+                  
               </div>
           </div>
       </div>
