--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -31,7 +31,7 @@
           background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
         "
       >
-        <div class="flex items-center h-full px-20 bg-gray-900 bg-opacity-40">
+        <div class="flex items-center h-full px-20 ">
           <div>
             <h2 class="text-4xl font-bold text-white">Register</h2>
   
@@ -169,7 +169,7 @@
                 </div>
               </div>
               
-              <div class="select" style="margin-top:10px; margin-bottom: 10px;">
+              <div *ngIf="isAdmin" class="select" style="margin-top:10px; margin-bottom: 10px;">
                 <select [(ngModel)]="usuario.id_rol" name="id_rol">
                   <option value="1">Alumno</option>
                   <option value="2">Maestro</option>
@@ -177,7 +177,7 @@
                 </select>
               </div>
               <br>
-              <div class="select" style="margin-top:5px; margin-bottom: 5px;" *ngIf="edit">
+              <div  class="select" style="margin-top:5px; margin-bottom: 5px;" *ngIf="edit&&isAdmin">
                 <select [(ngModel)]="usuario.status" name="status">
                   <option value="Activo">Activo</option>
                   <option value="Inactivo">Inactivo</option>
