--- a/client/src/app/components/grupos/grupos.component.html
+++ b/client/src/app/components/grupos/grupos.component.html
@@ -47,6 +47,10 @@
         type="text" style="height: 35px; width: 800px; margin-left: 20%;"placeholder="Search" 
         class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
       />
+      <button style="margin-bottom: 20px;" routerLink="/clases-list" data-ripple-light="true" data-popover-target="popover"
+      class="middle none center rounded-lg bg-gradient-to-tr from-blue-600 to-blue-400 py-3 px-5 font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all hover:shadow-lg hover:shadow-pink-500/40 active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+      AGREGAR NUEVO GRUPO
+    </button>
         <div class="flex flex-col">
        
         
