--- a/client/src/app/components/materiales/materiales.component.html
+++ b/client/src/app/components/materiales/materiales.component.html
@@ -1,11 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
+  <header>
+    <nav>
+      <div class="nav-wrapper" style="background-color: #0066ff">
+        <a routerLink="/" class="brand-logo"><img src="https://i.imgur.com/1NA0X3h.jpg" alt="logo" style="width: px; height:62px; margin-left: 5px;"/></a>
+
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+        <ul class="right hide-on-med-and-down">
+          <li class="has-dropdown"><a style="margin-right: 40px;">{{nombreUsuario}}</a> <ul class="dropdown">
+            <li><a (click)="logout()">Cerrar Sesion</a></li>
+          </ul>
+        </li>
+          <li *ngIf="isAdmin"><a routerLink="/usuarios-list">Users</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/admins-list">Administradores</a></li>
+          <li *ngIf="isAdmin" class="has-dropdown"><a routerLink="/alumnos-list">Alumnos</a>
+           
+          </li>
+          
+          <li *ngIf="isAdmin"><a routerLink="/maestros-list">Maestros</a></li>
+          <li *ngIf="isAdmin"><a routerLink="/grupos">Grupos</a></li>
+          <li><a routerLink="/clases">Clases</a></li>
+          <li *ngIf="!isAlumno" class="has-dropdown"><a>Horarios</a>
+            <ul class="dropdown">
+              <li *ngIf="isAdmin"><a routerLink="/horarios-form">Agregar Horario</a></li>
+              <li><a routerLink="/horarios">Ver Horarios</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/calificaciones-list">Calificaciones</a></li>
+          <li><a routerLink="/grabaciones">Grabaciones</a></li>
+          <li><a routerLink="">Materiales</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <h4 style="text-align: center">MATERIALES</h4>
+
+    
+  <!-- This example requires Tailwind CSS v2.0+ -->
+  <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200"
+      *ngFor="let clase of arrayClases[0]">
+      <div class="flex-1 flex flex-col p-8">
+        <img class="w-32 h-32 flex-shrink-0 mx-auto rounded-full"
+          src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
+          alt="">
+        <h3 class="mt-6 text-gray-900 text-sm font-medium">{{clase.nombre_grupo}}</h3>
+        <dl class="mt-1 flex-grow flex flex-col justify-between">
+          <dt class="sr-only">Title</dt>
+          <dd class="text-gray-500 text-sm">{{clase.Idioma}} <br></dd>
+          <h4 class="mt-6 text-gray-900 text-sm font-medium">Category</h4>
+          <dd class="text-gray-500 text-sm">{{clase.categoria}} <br></dd>
+          <h4 class="mt-6 text-gray-900 text-sm font-medium">Teachers</h4>
+
+          
+          <dd class="mt-3">
+            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">{{obtenerNombreMaestro(clase.id_maestro)}}</span> <br/><br>
+            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">{{obtenerNombreMaestro(clase.id_maestro2)}}</span>            
+
+          </dd>
+        </dl>
+      </div>
+      <div>
+        <div class="-mt-px flex divide-x divide-gray-200">
+          <div *ngIf="isAdmin||isMaestro" class="w-0 flex-1 flex">
+            <a (click)="getAlumnos(clase.id_grupo)"
+              class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+              <!-- Heroicon name: solid/mail -->
+
+              <span class="ml-3">Lista de Materiales</span>
+            </a>
+          </div>
+   
+        </div>
+
+        <div *ngIf="isAdmin" class="-mt-px flex divide-x divide-gray-200">
+          <div class="w-0 flex-1 flex">
+            <a (click)="copiarGrupo(clase.id_grupo)"
+              class="relative -mr-px w-0 flex-1 inline-flex items-center justify-center py-4 text-sm text-gray-700 font-medium border border-transparent rounded-bl-lg hover:text-gray-500">
+              <!-- Heroicon name: solid/mail -->
+
+              <span class="ml-3">Agregar Material</span>
+            </a>
+          </div>
+   
+        </div>
+
+
+      </div>
+    </li>
+
+
+
+    <!-- More people... -->
+
+  </ul>
+
+<br>
+
+
+
+  <br>
+
+  <h6 *ngIf="click">Lista de Materiales </h6>
+
+  <div class="file-upload">
+    <input type="file" 
+    
+    name="file" accept="image/*" />
+    <label for="file">Selecciona un archivo</label>
+  
+    <p id="file-name"></p>
+  </div>
+  
+  <script>
+    const fileInput = document.querySelector("input[name='file']");
+    const fileName = document.querySelector("#file-name");
+  
+    fileInput.addEventListener("change", () => {
+      const fileNames = fileInput.files.map((file) => file.name);
+      fileName.textContent = fileNames.join(", ");
+    });
+  </script>
   
 </body>
+
 </html>
