--- a/client/src/app/components/reportes/reportes-alumno-grupo/reportes-alumno-grupo.component.html
+++ b/client/src/app/components/reportes/reportes-alumno-grupo/reportes-alumno-grupo.component.html
@@ -59,13 +59,42 @@
       </header>
 
 
- 
-      <br>
-      <br>
-      <h5 style="text-align:center">REPORTES</h5>
       <div >
         <canvas id="myChart"></canvas>
         
+      </div>
+
+      <div class="flex flex-col">
+        <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+          <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+            <div class="overflow-hidden">
+              <table class="min-w-full">
+                <thead class="bg-white border-b">
+                  <tr>
+                    <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                      Nombre del Grupo
+                    </th>
+                    <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                      Numero de Alumnos
+                   
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="bg-gray-100 border-b" *ngFor="let alumno of arrayAlumnos[0]">
+                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ alumno.nombre_grupo }}</td>
+                    <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                      
+                    {{ alumno.total_alumnos }}
+                    </td>
+                   
+                
+                  </tr>
+                  
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
       </div>
      
     
