--- a/client/src/app/components/clases/clases.component.html
+++ b/client/src/app/components/clases/clases.component.html
@@ -72,6 +72,12 @@
                   Categoria
                 </th>
                 <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  Fecha de Inicio
+                </th>
+                <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                  Fecha Fin de Clases
+                </th>
+                <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                   Maestro 1
                 </th>
                 <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
@@ -95,6 +101,13 @@
               </td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 {{ grupo.categoria }}
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                {{ grupo.fecha_inicio.substring(0,10) }}
+              </td>
+
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                {{ grupo.fecha_final.substring(0,10) }}
               </td>
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 {{ nombreMaestro(grupo.id_maestro) }}
@@ -124,15 +137,15 @@
 
 
 
-  <h6 *ngIf="agregarGrupo">Ingresar Nuevo Grupo</h6>
+  <h6 *ngIf="agregarGrupo" style="margin-left: 30px;">Ingresar Nuevo Grupo</h6>
   <input *ngIf="agregarGrupo" type="text" name="last_name" [(ngModel)]="grupo.nombre_grupo"
-    style="height: 35px; width: 150px" id="password" placeholder="New Group Name"
+    style="height: 35px; width: 150px; margin-left: 30px;" id="password" placeholder="New Group Name"
     class="block w-full px-4 py1 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
 
 
 
-  <h5 *ngIf="agregarGrupo">Categoria del Grupo</h5>
-  <div class="select" *ngIf="agregarGrupo">
+  <h5 *ngIf="agregarGrupo" style="margin-left: 30px;">Categoria del Grupo</h5>
+  <div class="select" *ngIf="agregarGrupo" style="margin-left: 30px;">
     <select [(ngModel)]="grupo.categoria" name="horario.id_maestro" required>
       <option>Select Category</option>
       <option value="Monday-Thursday">Monday Thursday</option>
@@ -140,7 +153,7 @@
     </select>
   </div>
 
-  <div *ngIf="agregarGrupo" class="field">
+  <div *ngIf="agregarGrupo" style="margin-left: 30px;" class="field">
     <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Language</label>
     <div class="control">
       <div class="select">
@@ -154,8 +167,62 @@
     </div>
   </div>
 
-  <h5 *ngIf="agregarGrupo">Numero de Maestros</h5>
-  <div *ngIf="agregarGrupo" class="select">
+  <div *ngIf="agregarGrupo"  style="margin-left: 30px; margin-top: 20px;">
+    <label
+      for="email"
+      class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+      >Fecha Inicio </label
+    >
+    <input
+      type="date"
+      name="Hora_inicio"
+      id="email"
+      [(ngModel)]="grupo.fecha_inicio"
+      style="width: 150px"
+      placeholder="example@example.com"
+      value=""
+      class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+    />
+  </div>
+
+  <div *ngIf="agregarGrupo"  style="margin-left: 30px; margin-top: 20px;">
+    <label
+      for="email"
+      class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+      >Fecha de Revision</label
+    >
+    <input
+      type="date"
+      name="Hora_inicio"
+      id="email"
+      [(ngModel)]="grupo.fecha_revision"
+      style="width: 150px"
+      placeholder="example@example.com"
+      value=""
+      class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+    />
+  </div>
+
+  <div *ngIf="agregarGrupo"  style="margin-left: 30px; margin-top: 20px;">
+    <label
+      for="email"
+      class="block mb-2 text-sm text-gray-600 dark:text-gray-200"
+      >Fecha de Examen</label
+    >
+    <input
+      type="date"
+      name="Hora_inicio"
+      id="email"
+      [(ngModel)]="grupo.fecha_final"
+      style="width: 150px"
+      placeholder="example@example.com"
+      value=""
+      class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40"
+    />
+  </div>
+
+  <h5 *ngIf="agregarGrupo" style="margin-left: 30px;">Numero de Maestros</h5>
+  <div *ngIf="agregarGrupo" class="select" style="margin-left: 30px;">
     <select [(ngModel)]="numeroMaes" name="horario.id_maestro" required>
       <option>Select Teachers Total</option>
       <option value="1">1</option>
