--- a/client/src/app/components/horarios-form/horarios-form.component.html
+++ b/client/src/app/components/horarios-form/horarios-form.component.html
@@ -139,7 +139,7 @@
 </div>
 -->
 
-<div>
+<div *ngIf="edit">
   <div class="field">
     <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Semana</label>
     <div class="control">
